--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "~41.0.1",
+    "expo-constants": "^10.1.3",
+    "expo-notifications": "^0.11.6",
+    "expo-permissions": "^12.0.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "react": "16.13.1",
