--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "~41.0.1",
+    "expo-cli": "^4.5.2",
     "expo-constants": "^10.1.3",
     "expo-notifications": "^0.11.6",
     "expo-permissions": "^12.0.1",
